--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "watch": "webpack --mode production --watch",
+    "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
   "babel": {
@@ -21,8 +20,6 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.6",
     "@sitecore/sc-contenthub-webclient-sdk": "^1.2.5",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
@@ -36,9 +33,11 @@
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "glob": "^10.3.10",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.0",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
